final config for first publish

--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,5 @@
-.prettierrc.json
-*.test.js
+.prettierignore
 *.test.d.ts
+*.test.js
 src
-files
-.vscode
-tsconfig.json
-prettierignore
-.cspell.json
-dist/sanitizer
-repo-paths*
-*.sh
-.git*
-dist/readme*
-dist/package-version*
-dist/bash*
+test-repos
