--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
         "noImplicitThis": true,
         "noUncheckedIndexedAccess": true,
         "outDir": "dist",
+        "rootDir": "src",
         "skipDefaultLibCheck": true,
         "strict": true,
         "target": "es6"
     },
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist", "test-repos"]
 }
