add script to test specific file
it uses virmator itself!

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
         "sanitize:no-compile": "node dist/sanitizer/sanitize-for-test-file-cli.js",
         "sanitize": "npm run compile && node dist/sanitizer/sanitize-for-test-file-cli.js",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-repos/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extended-configs\"",
-        "test:file": "./test-specific-file.sh",
+        "test:file": "ts-node ./scripts/test-specific-file.ts",
         "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check",
+        "test:help": "npm run compile && node dist/cli/cli.js --help",
         "test": "npm run compile && test-vir \"./dist/**/!(*.type).test.js\""
     },
     "dependencies": {
@@ -47,7 +48,8 @@
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.12",
-        "@types/node": "^16.4.7"
+        "@types/node": "^16.4.7",
+        "ts-node": "^10.2.1"
     },
     "engines": {
         "node": ">=12",
