--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "Handle all the stuffs in one package.",
     "keywords": [],
     "homepage": "https://github.com/electrovir/virmator",
@@ -35,8 +35,8 @@
         "test": "npm run compile && test-vir \"./dist/**/!(*.type).test.js\""
     },
     "dependencies": {
-        "ansi-styles": "^5.2.0",
-        "cspell": "^5.6.6",
+        "ansi-styles": "5.2.0",
+        "cspell": "^5.8.2",
         "fs-extra": "^10.0.0",
         "prettier": "^2.3.2",
         "prettier-plugin-jsdoc": "^0.3.23",
@@ -44,11 +44,11 @@
         "prettier-plugin-packagejson": "^2.2.11",
         "prettier-plugin-sort-json": "^0.0.2",
         "test-vir": "^0.2.1",
-        "typescript": "^4.3.5"
+        "typescript": "^4.4.2"
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.12",
-        "@types/node": "^16.4.7",
+        "@types/node": "^16.7.2",
         "ts-node": "^10.2.1"
     },
     "engines": {
