--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
+        "alwaysStrict": true,
         "declaration": true,
         "esModuleInterop": true,
+        "exactOptionalPropertyTypes": true,
         "forceConsistentCasingInFileNames": true,
         "module": "commonjs",
         "noImplicitAny": true,
+        "noImplicitOverride": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "noUncheckedIndexedAccess": true,
@@ -12,7 +15,8 @@
         "rootDir": "src",
         "skipDefaultLibCheck": true,
         "strict": true,
-        "target": "es6"
+        "target": "es6",
+        "useUnknownInCatchVariables": true
     },
     "exclude": ["node_modules", "dist", "test-repos", "scripts"]
 }
