--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "outDir": "dist",
         "rootDir": "src",
         "skipDefaultLibCheck": true,
+        "skipLibCheck": true,
         "strict": true,
         "target": "es6",
         "useUnknownInCatchVariables": true
