--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "1.0.6",
+    "version": "1.1.0",
     "description": "Handle all the stuffs in one package.",
     "keywords": [],
     "homepage": "https://github.com/electrovir/virmator",
@@ -43,6 +43,7 @@
         "prettier-plugin-organize-imports": "^2.3.3",
         "prettier-plugin-packagejson": "^2.2.11",
         "prettier-plugin-sort-json": "^0.0.2",
+        "simple-git": "^2.45.0",
         "test-vir": "^0.2.1",
         "typescript": "^4.4.2"
     },
