--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "bin": "dist/cli/cli.js",
     "scripts": {
-        "compile": "rm -rf dist && tsc",
+        "compile": "rm -rf dist && tsc && chmod +x dist/cli/cli.js",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "format:check": "npm run format:base -- --check",
         "format": "npm run format:base -- --write",
