don't default to extendable spellcheck
update npmignore as well

--- a/separate-configs/package.json
+++ b/separate-configs/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "prepublishOnly": "npm run test:full",
-        "spellcheck": "virmator spellcheck --extendable-config",
+        "spellcheck": "virmator spellcheck",
         "test": "virmator test",
         "test:full": "npm test && npm run spellcheck && virmator format check",
         "format": "virmator format write"
