--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "1.1.15",
+    "version": "1.2.0",
     "description": "Handle all the stuffs in one package.",
     "keywords": [],
     "homepage": "https://github.com/electrovir/virmator",
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "ansi-styles": "5.2.0",
+        "augment-vir": "^1.0.0",
         "cspell": "^5.10.0",
         "fs-extra": "^10.0.0",
         "prettier": "^2.4.1",
