--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "description": "Handle all the stuffs in one package.",
     "keywords": [],
     "homepage": "https://github.com/electrovir/virmator",
@@ -19,37 +19,37 @@
     "bin": "dist/cli/cli.js",
     "scripts": {
         "compile": "rm -rf dist && tsc && chmod +x dist/cli/cli.js",
+        "format": "npm run format:base -- --write",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "format:check": "npm run format:base -- --check",
-        "format": "npm run format:base -- --write",
         "prepublishOnly": "npm install && npm run test:full",
+        "sanitize": "npm run compile && node dist/sanitizer/sanitize-for-test-file-cli.js",
         "sanitize:all": "./bulk-sanitize.sh files/downloads",
         "sanitize:no-compile": "node dist/sanitizer/sanitize-for-test-file-cli.js",
-        "sanitize": "npm run compile && node dist/sanitizer/sanitize-for-test-file-cli.js",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-repos/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
+        "test": "npm run compile && test-vir \"./dist/**/!(*.type).test.js\"",
         "test:file": "ts-node ./scripts/test-specific-file.ts",
         "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check",
-        "test:help": "npm run compile && node dist/cli/cli.js --help",
-        "test": "npm run compile && test-vir \"./dist/**/!(*.type).test.js\""
+        "test:help": "npm run compile && node dist/cli/cli.js --help"
     },
     "dependencies": {
         "ansi-styles": "5.2.0",
-        "augment-vir": "^1.0.0",
-        "cspell": "^5.10.0",
+        "augment-vir": "^1.1.0",
+        "cspell": "^5.12.3",
         "fs-extra": "^10.0.0",
         "prettier": "^2.4.1",
         "prettier-plugin-jsdoc": "^0.3.24",
-        "prettier-plugin-organize-imports": "^2.3.3",
-        "prettier-plugin-packagejson": "^2.2.12",
+        "prettier-plugin-organize-imports": "^2.3.4",
+        "prettier-plugin-packagejson": "^2.2.13",
         "prettier-plugin-sort-json": "^0.0.2",
-        "simple-git": "^2.45.1",
+        "simple-git": "^2.46.0",
         "test-vir": "^0.2.1",
-        "typescript": "^4.4.3"
+        "typescript": "^4.4.4"
     },
     "devDependencies": {
-        "@types/fs-extra": "^9.0.12",
-        "@types/node": "^16.9.2",
-        "ts-node": "^10.2.1"
+        "@types/fs-extra": "^9.0.13",
+        "@types/node": "^16.10.4",
+        "ts-node": "^10.3.0"
     },
     "engines": {
         "node": ">=12",
