--- a/separate-configs/package.json
+++ b/separate-configs/package.json
@@ -1,9 +1,9 @@
 {
     "scripts": {
+        "format": "virmator format write",
         "prepublishOnly": "npm run test:full",
         "spellcheck": "virmator spellcheck",
         "test": "virmator test",
-        "test:full": "npm test && npm run spellcheck && virmator format check",
-        "format": "virmator format write"
+        "test:full": "npm test && npm run spellcheck && virmator format check"
     }
 }
