update tagged release to wait for tests

--- a/.github/workflows/virmator-tagged-release.yml
+++ b/.github/workflows/virmator-tagged-release.yml
@@ -1,9 +1,13 @@
 name: tagged-release
 
 on:
-    push:
+    workflow_run:
+        workflows: ['tests']
+        branches: ['main', 'master']
         tags:
             - 'v*'
+        types:
+            - 'completed'
 
 jobs:
     tagged-release:
