--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "description": "Handle all the stuffs in one package.",
     "keywords": [],
     "homepage": "https://github.com/electrovir/virmator",
@@ -29,7 +29,7 @@
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-repos/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
         "test": "npm run compile && test-vir \"./dist/**/!(*.type).test.js\"",
         "test:file": "ts-node ./scripts/test-specific-file.ts",
-        "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check",
+        "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check && md-code --check README.md",
         "test:help": "npm run compile && node dist/cli/cli.js --help"
     },
     "dependencies": {
@@ -37,6 +37,7 @@
         "augment-vir": "^1.1.0",
         "cspell": "^5.12.3",
         "fs-extra": "^10.0.0",
+        "markdown-code-example-inserter": "^0.1.5",
         "prettier": "^2.4.1",
         "prettier-plugin-jsdoc": "^0.3.24",
         "prettier-plugin-organize-imports": "^2.3.4",
