revert trying to do fancy tagged-release
can't figure out yet how to trigger an action on tag push that also waits for another workflow (tests) to finish
I need to make my own action and dig deeper into the GitHub actions API to figure out how to do this

--- a/.github/workflows/virmator-tagged-release.yml
+++ b/.github/workflows/virmator-tagged-release.yml
@@ -1,32 +1,22 @@
-name: tagged-release
+name: 'tagged-release'
 
 on:
-    workflow_run:
-        workflows: ['tests']
-        branches: ['main', 'master']
-        types:
-            - 'completed'
+    push:
+        tags:
+            - 'v*'
 
 jobs:
     tagged-release:
         name: 'Tagged Release'
         runs-on: 'ubuntu-latest'
-        if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
         steps:
-            - uses: actions/checkout@v1
-            - name: Use Node.js 14.x
-              uses: actions/setup-node@v1
-              with:
-                  node-version: 14.x
-            - name: set vars
-              id: vars
+            - name: 'build and test'
               run: |
-                  tagName="$(git describe --tags --abbrev=0 --exact-match $GITHUB_SHA 2>/dev/null || echo "")"
-                  echo ::set-output name=tag_name::"$tagName"
-            - name: deploy to tag
-              if: startsWith(steps.vars.outputs.tag_name, 'v')
-              uses: 'marvinpinto/action-automatic-releases@latest'
+                  npm ci
+                  npm run test:full
+
+            - uses: 'marvinpinto/action-automatic-releases@latest'
               with:
                   repo_token: '${{ secrets.GITHUB_TOKEN }}'
-                  automatic_release_tag: '${{ steps.vars.outputs.tag_name }}'
                   prerelease: false
