--- a/.github/workflows/virmator-prerelease.yml
+++ b/.github/workflows/virmator-prerelease.yml
@@ -18,6 +18,10 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: 14.x
+            - name: run test
+              run: |
+                  npm ci
+                  npm run test:full
             - name: pack and set vars
               id: vars
               run: |
