--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
     "name": "virmator",
-    "version": "1.3.4",
+    "version": "1.3.5",
     "description": "Handle all the stuffs in one package.",
-    "keywords": [],
+    "keywords": [
+        "automation",
+        "template",
+        "vir",
+        "formatting",
+        "spellcheck",
+        "config"
+    ],
     "homepage": "https://github.com/electrovir/virmator",
     "bugs": {
         "url": "https://github.com/electrovir/virmator/issues"
