include package tar in tagged release assets

--- a/.github/workflows/virmator-prerelease.yml
+++ b/.github/workflows/virmator-prerelease.yml
@@ -26,17 +26,17 @@ jobs:
               id: vars
               run: |
                   branchName="${GITHUB_REF#refs/*/}"
-                  echo ::set-output name=tagName::"$branchName-$GITHUB_SHA"
+                  echo ::set-output name=prereleaseTagName::"$branchName-$GITHUB_SHA"
 
                   originalTarName="$(npm pack)"
                   packageName="$(npm -s run env echo '$npm_package_name')"
                   newTarName="$packageName-$GITHUB_SHA.tgz"
                   mv "$originalTarName" "$newTarName"
-                  echo ::set-output name=tar_name::"$newTarName"
+                  echo ::set-output name=tarName::"$newTarName"
             - uses: 'marvinpinto/action-automatic-releases@latest'
               with:
                   repo_token: '${{ secrets.GITHUB_TOKEN }}'
-                  automatic_release_tag: 'prerelease-${{ steps.vars.outputs.tagName }}'
+                  automatic_release_tag: 'prerelease-${{ steps.vars.outputs.prereleaseTagName }}'
                   prerelease: true
                   files: |
-                      ${{ steps.vars.outputs.tar_name }}
+                      ${{ steps.vars.outputs.tarName }}
