--- a/package.json
+++ b/package.json
@@ -31,25 +31,27 @@
         "format:check": "npm run format:base -- --check",
         "prepublishOnly": "npm install && npm run test:full",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-repos/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
-        "test": "npm run compile && test-vir \"./dist/**/!(*.type).test.js\"",
+        "test": "jest --runInBand --config ./src/jest/jest.config.ts",
         "test:file": "ts-node ./scripts/test-specific-file.ts",
         "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check && md-code --check README.md",
         "test:help": "npm run compile && node dist/cli/cli.js --help"
     },
     "dependencies": {
+        "@types/jest": "^27.4.1",
         "ansi-styles": "5.2.0",
-        "augment-vir": "^1.5.1",
+        "augment-vir": "^1.6.1",
         "cspell": "^5.19.2",
         "fs-extra": "^10.0.1",
+        "jest": "^27.5.1",
         "markdown-code-example-inserter": "^0.1.5",
-        "prettier": "^2.5.1",
+        "prettier": "^2.6.0",
         "prettier-plugin-jsdoc": "^0.3.31",
         "prettier-plugin-multiline-arrays": "^0.0.3",
         "prettier-plugin-organize-imports": "^2.3.4",
         "prettier-plugin-packagejson": "^2.2.16",
         "prettier-plugin-sort-json": "^0.0.2",
         "simple-git": "^3.4.0",
-        "test-vir": "^0.2.3",
+        "ts-jest": "^27.1.3",
         "typescript": "^4.6.2"
     },
     "devDependencies": {
