--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "esModuleInterop": true,
         "exactOptionalPropertyTypes": true,
         "forceConsistentCasingInFileNames": true,
-        "module": "commonjs",
+        "module": "CommonJS",
+        "moduleResolution": "Node",
         "noImplicitAny": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
@@ -24,5 +25,10 @@
         "dist",
         "test-repos",
         "scripts"
-    ]
+    ],
+    "ts-node": {
+        "compilerOptions": {
+            "module": "CommonJS"
+        }
+    }
 }
