--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
         "format:check": "npm run format:base -- --check",
         "prepublishOnly": "npm install && npm run test:full",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-repos/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
-        "test": "npm run compile && test-vir \"./dist/**/!(*.type).test.js\"",
+        "test": "jest --runInBand --config ./src/jest/jest.config.ts",
         "test:file": "ts-node ./scripts/test-specific-file.ts",
         "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check && md-code --check README.md",
         "test:help": "npm run compile && node dist/cli/cli.js --help"
     },
     "dependencies": {
+        "@types/jest": "^27.4.0",
         "ansi-styles": "5.2.0",
         "augment-vir": "^1.4.3",
         "cspell": "^5.18.4",
         "fs-extra": "^10.0.0",
+        "jest": "^27.5.1",
         "markdown-code-example-inserter": "^0.1.5",
         "prettier": "^2.5.1",
         "prettier-plugin-jsdoc": "^0.3.30",
@@ -49,7 +51,7 @@
         "prettier-plugin-packagejson": "^2.2.15",
         "prettier-plugin-sort-json": "^0.0.2",
         "simple-git": "^3.2.4",
-        "test-vir": "^0.2.3",
+        "ts-jest": "^27.1.3",
         "typescript": "^4.5.5"
     },
     "devDependencies": {
