--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
         "prettier-plugin-sort-json": "^0.0.2",
         "simple-git": "^3.4.0",
         "ts-jest": "^27.1.3",
+        "ts-node": "^10.7.0",
         "typescript": "^4.6.2"
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.13",
-        "@types/node": "^17.0.21",
-        "ts-node": "^10.7.0"
+        "@types/node": "^17.0.21"
     },
     "engines": {
         "node": ">=12",
