move scripst into src and rename test-repos
rename test-repos to test-files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,9 @@
         "useUnknownInCatchVariables": true
     },
     "exclude": [
-        "node_modules",
         "dist",
-        "test-repos",
-        "scripts"
+        "node_modules",
+        "test-files"
     ],
     "ts-node": {
         "compilerOptions": {
