update test command tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "exclude": [
         "dist",
         "node_modules",
+        "separate-configs",
         "test-files"
     ],
     "ts-node": {
