--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,10 @@
 *.test.d.ts
 *.test.js
-src/
-src/tests/
-test-files/
-src/scripts/
+
+dist/file-paths/virmator-test-file-paths.js
+
 public/
+src/
+dist/scripts/
+dist/tests/
+test-files/
