--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "Handle all the stuffs in one package.",
     "keywords": [
         "automation",
@@ -40,31 +40,31 @@
         "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help"
     },
     "dependencies": {
-        "@types/jest": "^27.4.1",
+        "@types/jest": "27.4.1",
         "ansi-styles": "5.2.0",
-        "augment-vir": "^1.6.1",
-        "cspell": "^5.19.2",
-        "fs-extra": "^10.0.1",
-        "jest": "^27.5.1",
-        "markdown-code-example-inserter": "^0.1.5",
-        "prettier": "^2.6.0",
-        "prettier-plugin-jsdoc": "^0.3.31",
-        "prettier-plugin-multiline-arrays": "^0.0.3",
-        "prettier-plugin-organize-imports": "^2.3.4",
-        "prettier-plugin-packagejson": "^2.2.16",
-        "prettier-plugin-sort-json": "^0.0.2",
-        "simple-git": "^3.4.0",
-        "ts-jest": "^27.1.3",
-        "ts-node": "^10.7.0",
-        "tsconfig-paths": "^3.14.0",
-        "typescript": "^4.6.2"
+        "augment-vir": "1.7.0",
+        "cspell": "5.19.2",
+        "fs-extra": "10.0.1",
+        "jest": "27.5.1",
+        "markdown-code-example-inserter": "0.1.6",
+        "prettier": "2.6.0",
+        "prettier-plugin-jsdoc": "0.3.31",
+        "prettier-plugin-multiline-arrays": "0.0.4",
+        "prettier-plugin-organize-imports": "2.3.4",
+        "prettier-plugin-packagejson": "2.2.16",
+        "prettier-plugin-sort-json": "0.0.2",
+        "simple-git": "3.4.0",
+        "ts-jest": "27.1.3",
+        "ts-node": "10.7.0",
+        "tsconfig-paths": "3.14.0",
+        "typescript": "4.6.2"
     },
     "devDependencies": {
-        "@types/fs-extra": "^9.0.13",
-        "@types/node": "^17.0.21"
+        "@types/fs-extra": "9.0.13",
+        "@types/node": "17.0.21"
     },
     "engines": {
-        "node": ">=12",
+        "node": ">=14",
         "npm": ">=7"
     }
 }
