--- a/.github/workflows/virmator-prerelease.yml
+++ b/.github/workflows/virmator-prerelease.yml
@@ -3,17 +3,22 @@ name: branch-prerelease
 on:
     workflow_run:
         workflows: ['tests']
-        branches: '**'
         types:
             - completed
+        branches:
+            - '**'
+
+# this is currently running on main no matter what, even when a different branch triggered "tests"
 
 jobs:
-    package-release:
-        name: 'package release'
+    branch-prerelease:
+        name: 'branch prerelease'
         runs-on: 'ubuntu-latest'
         if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
             - uses: actions/checkout@v1
+              with:
+                  ref: ${{ github.event.workflow_run.head_branch }}
             - name: Use Node.js 16.x
               uses: actions/setup-node@v1
               with:
