--- a/configs/.github/workflows/virmator-tagged-release.yml
+++ b/configs/.github/workflows/virmator-tagged-release.yml
@@ -1,4 +1,4 @@
-name: 'tagged-release'
+name: tagged-release
 
 on:
     push:
@@ -11,9 +11,9 @@ jobs:
         runs-on: 'ubuntu-latest'
 
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v3
             - name: Use Node.js 16.x
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.x
             - name: run test
