--- a/package.json
+++ b/package.json
@@ -40,21 +40,23 @@
         "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help"
     },
     "dependencies": {
-        "@types/jest": "27.5.0",
-        "ansi-styles": "5.2.0",
-        "augment-vir": "2.1.0",
+        "@types/chai": "4.3.1",
+        "@types/mocha": "9.1.1",
+        "ansi-colors": "4.1.1",
+        "augment-vir": "2.2.1",
+        "chai": "4.3.6",
         "cspell": "5.20.0",
         "fs-extra": "10.1.0",
-        "jest": "28.0.3",
         "markdown-code-example-inserter": "0.1.7",
+        "mocha": "10.0.0",
         "prettier": "2.6.2",
         "prettier-plugin-jsdoc": "0.3.38",
         "prettier-plugin-multiline-arrays": "1.0.0",
         "prettier-plugin-organize-imports": "2.3.4",
         "prettier-plugin-packagejson": "2.2.17",
         "prettier-plugin-sort-json": "0.0.2",
+        "prettier-plugin-toml": "0.3.1",
         "simple-git": "3.7.1",
-        "ts-jest": "28.0.1",
         "ts-node": "10.7.0",
         "tsconfig-paths": "4.0.0",
         "typescript": "4.6.4"
