--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "readme:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
         "readme:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
-        "test": "npm install && npm run compile && jest --runInBand --config ./src/jest/jest-config.ts",
+        "test": "npm install && npm run compile && mocha --config ./.mocharc.js",
         "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check && npm run readme:check",
         "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help"
     },
