--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -1,39 +1,3 @@
 {
-    "compilerOptions": {
-        "alwaysStrict": true,
-        "declaration": true,
-        "esModuleInterop": true,
-        "exactOptionalPropertyTypes": true,
-        "forceConsistentCasingInFileNames": true,
-        "isolatedModules": true,
-        "module": "CommonJS",
-        "moduleResolution": "Node",
-        "noEmitOnError": true,
-        "noErrorTruncation": true,
-        "noImplicitAny": true,
-        "noImplicitOverride": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noUncheckedIndexedAccess": true,
-        "outDir": "dist",
-        "pretty": true,
-        "resolveJsonModule": true,
-        "rootDir": "src",
-        "skipDefaultLibCheck": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "target": "ES2019",
-        "useUnknownInCatchVariables": true
-    },
-    "exclude": [
-        "dist",
-        "node_modules",
-        "separate-configs",
-        "test-files"
-    ],
-    "ts-node": {
-        "compilerOptions": {
-            "module": "CommonJS"
-        }
-    }
+    "extends": "./.virmator/tsconfig-base.json"
 }
