--- a/configs/.github/workflows/virmator-tagged-release.yml
+++ b/configs/.github/workflows/virmator-tagged-release.yml
@@ -1,4 +1,4 @@
-name: tagged-release
+name: 'tagged-release'
 
 on:
     push:
@@ -12,7 +12,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v3
-            - name: Use Node.js 16.x
+            - name: Use Node.js
               uses: actions/setup-node@v3
               with:
                   node-version: 16.x
@@ -25,7 +25,9 @@ jobs:
               run: |
                   tagName="${GITHUB_REF#refs/*/}"
                   originalTarName="$(npm pack)"
-                  packageName="$(npm -s run env echo '$npm_package_name')"
+                  packageNameWithoutFileExtension="${originalTarName%.tgz}"
+                  tagNameWithoutV="${tagName##v}"
+                  packageName="${packageNameWithoutFileExtension%-$tagNameWithoutV}"
                   newTarName="$packageName-$tagName.tgz"
                   mv "$originalTarName" "$newTarName"
                   echo ::set-output name=tarName::"$newTarName"
