update deps, add more configs

--- a/configs/.virmator/tsconfig-base.json
+++ b/configs/.virmator/tsconfig-base.json
@@ -29,7 +29,8 @@
         "../dist",
         "../node_modules",
         "../separate-configs",
-        "../test-files"
+        "../test-files",
+        "../.virmator"
     ],
     "ts-node": {
         "compilerOptions": {
