--- a/package.json
+++ b/package.json
@@ -42,28 +42,29 @@
     "dependencies": {
         "@types/chai": "4.3.1",
         "@types/mocha": "9.1.1",
-        "ansi-colors": "4.1.1",
+        "ansi-colors": "4.1.3",
         "augment-vir": "2.2.1",
         "chai": "4.3.6",
-        "cspell": "5.20.0",
+        "cspell": "6.1.2",
         "fs-extra": "10.1.0",
         "markdown-code-example-inserter": "0.1.9",
         "mocha": "10.0.0",
-        "prettier": "2.6.2",
+        "prettier": "2.7.1",
         "prettier-plugin-jsdoc": "0.3.38",
         "prettier-plugin-multiline-arrays": "1.0.0",
-        "prettier-plugin-organize-imports": "2.3.4",
-        "prettier-plugin-packagejson": "2.2.17",
+        "prettier-plugin-organize-imports": "3.0.0",
+        "prettier-plugin-packagejson": "2.2.18",
         "prettier-plugin-sort-json": "0.0.2",
         "prettier-plugin-toml": "0.3.1",
-        "simple-git": "3.7.1",
-        "ts-node": "10.7.0",
+        "simple-git": "3.10.0",
+        "ts-node": "10.8.1",
         "tsconfig-paths": "4.0.0",
-        "typescript": "4.6.4"
+        "typescript": "4.7.4",
+        "vite": "2.9.12"
     },
     "devDependencies": {
         "@types/fs-extra": "9.0.13",
-        "@types/node": "17.0.31"
+        "@types/node": "18.0.0"
     },
     "engines": {
         "node": ">=14",
