--- a/package.json
+++ b/package.json
@@ -40,8 +40,13 @@
         "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help"
     },
     "dependencies": {
+        "@open-wc/testing": "3.1.6",
         "@types/chai": "4.3.1",
         "@types/mocha": "9.1.1",
+        "@web/dev-server-esbuild": "0.3.1",
+        "@web/test-runner": "0.13.31",
+        "@web/test-runner-commands": "0.6.3",
+        "@web/test-runner-playwright": "0.8.9",
         "ansi-colors": "4.1.3",
         "augment-vir": "2.2.1",
         "chai": "4.3.6",
