--- a/configs/package.json
+++ b/configs/package.json
@@ -4,7 +4,7 @@
     "types": "dist/types/index.d.ts",
     "scripts": {
         "compile": "rm -rf dist && tsc --project tsconfig.json && tsc --project tsconfig.cjs.json && tsc --project tsconfig.esm.json",
-        "docs:update": "",
+        "docs:update": "virmator code-in-markdown",
         "format": "virmator format write",
         "prepublishOnly": "npm run compile && npm run test:full",
         "spellcheck": "virmator spellcheck",
