--- a/configs/package.json
+++ b/configs/package.json
@@ -1,9 +1,9 @@
 {
     "license": "MIT",
-    "main": "dist/cjs/index.js",
-    "types": "dist/types/index.d.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
-        "compile": "rm -rf dist && tsc --project tsconfig.json && tsc --project tsconfig.cjs.json && tsc --project tsconfig.esm.json",
+        "compile": "rm -rf dist && tsc --project tsconfig.json",
         "docs:update": "virmator code-in-markdown",
         "format": "virmator format write",
         "prepublishOnly": "npm run compile && npm run test:full",
