--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "2.0.7",
+    "version": "3.0.0",
     "description": "Handle all the stuffs in one package.",
     "keywords": [
         "automation",
@@ -31,7 +31,7 @@
         "format": "npm run format:base -- --write",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "format:check": "npm run format:base -- --check",
-        "prepublishOnly": "npm install && npm run test:full",
+        "prepublishOnly": "npm run test:full",
         "readme:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
         "readme:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
@@ -50,7 +50,7 @@
         "ansi-colors": "4.1.3",
         "augment-vir": "2.2.1",
         "chai": "4.3.6",
-        "cspell": "6.2.2",
+        "cspell": "6.2.3",
         "markdown-code-example-inserter": "0.1.11",
         "mocha": "10.0.0",
         "prettier": "2.7.1",
@@ -64,10 +64,10 @@
         "ts-node": "10.8.2",
         "tsconfig-paths": "4.0.0",
         "typescript": "4.7.4",
-        "vite": "2.9.13"
+        "vite": "2.9.14"
     },
     "devDependencies": {
-        "@types/node": "18.0.1"
+        "@types/node": "18.0.3"
     },
     "engines": {
         "node": ">=14",
