fix tests for GitHub Actions

--- a/.github/workflows/virmator-tests.yml
+++ b/.github/workflows/virmator-tests.yml
@@ -22,4 +22,5 @@ jobs:
             - name: run test
               run: |
                   npm ci
+                  npx playwright install --with-deps
                   npm run test:full
