--- a/.github/workflows/virmator-tagged-release.yml
+++ b/.github/workflows/virmator-tagged-release.yml
@@ -8,6 +8,7 @@ on:
 jobs:
     tagged-release:
         name: 'Tagged Release'
+        if: github.event.base_ref == 'refs/heads/main' || github.event.base_ref == 'refs/heads/master'
         runs-on: 'ubuntu-latest'
 
         steps:
@@ -19,6 +20,7 @@ jobs:
             - name: run test
               run: |
                   npm ci
+                  npx playwright install
                   npm run test:full
             - name: pack and set vars
               id: vars
