fix gh pages build

--- a/.github/workflows/virmator-build-for-gh-pages.yml
+++ b/.github/workflows/virmator-build-for-gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
               run: |
                   npm ci
                   npm run build
-            - uses: 'JamesIves/github-pages-deploy-action@4'
+            - uses: JamesIves/github-pages-deploy-action@v4
               with:
                   branch: 'gh-pages'
                   folder: 'dist'
