--- a/configs/package.json
+++ b/configs/package.json
@@ -3,6 +3,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
+        "build": "virmator frontend build",
         "compile": "rm -rf dist && tsc --project tsconfig.json",
         "docs:update": "virmator code-in-markdown",
         "format": "virmator format write",
