--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
         "@web/test-runner": "0.14.0",
         "@web/test-runner-commands": "0.6.4",
         "@web/test-runner-playwright": "0.8.10",
-        "ansi-colors": "4.1.3",
+        "ansi-colors": "4.1.3"
+    },
+    "devDependencies": {
+        "@types/node": "18.7.14",
         "augment-vir": "2.4.0",
         "chai": "4.3.6",
         "cspell": "6.7.0",
@@ -65,9 +68,6 @@
         "tsconfig-paths": "4.1.0",
         "typescript": "4.7.4",
         "vite": "3.0.9"
-    },
-    "devDependencies": {
-        "@types/node": "18.7.8"
     },
     "engines": {
         "node": ">=16",
