--- a/package.json
+++ b/package.json
@@ -41,18 +41,22 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
+        "ansi-colors": "^4.1.3",
+        "augment-vir": "2.5.1",
+        "semver": "7.3.7",
+        "simple-git": "3.14.1"
+    },
+    "devDependencies": {
         "@open-wc/testing": "3.1.6",
         "@types/chai": "4.3.3",
         "@types/mocha": "9.1.1",
+        "@types/node": "18.7.21",
+        "@types/semver": "7.3.12",
         "@web/dev-server-esbuild": "0.3.2",
         "@web/test-runner": "0.14.0",
         "@web/test-runner-commands": "0.6.5",
         "@web/test-runner-playwright": "0.8.10",
-        "ansi-colors": "4.1.3"
-    },
-    "devDependencies": {
-        "@types/node": "18.7.21",
-        "@types/semver": "7.3.12",
+        "ansi-colors": "4.1.3",
         "augment-vir": "2.5.1",
         "chai": "4.3.6",
         "cspell": "6.10.1",
@@ -65,8 +69,6 @@
         "prettier-plugin-packagejson": "2.2.18",
         "prettier-plugin-sort-json": "0.0.3",
         "prettier-plugin-toml": "0.3.1",
-        "semver": "7.3.7",
-        "simple-git": "3.14.1",
         "ts-node": "10.9.1",
         "tsconfig-paths": "4.1.0",
         "typescript": "4.8.3",
