update configs and tests

--- a/base-configs/base-tsconfig.json
+++ b/base-configs/base-tsconfig.json
@@ -4,6 +4,7 @@
         "declaration": true,
         "esModuleInterop": true,
         "exactOptionalPropertyTypes": true,
+        "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
         "module": "CommonJS",
@@ -15,10 +16,8 @@
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "noUncheckedIndexedAccess": true,
-        "outDir": "../dist",
         "pretty": true,
         "resolveJsonModule": true,
-        "rootDir": "../src",
         "skipDefaultLibCheck": true,
         "skipLibCheck": true,
         "strict": true,
