--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -1,3 +1,13 @@
 {
-    "extends": "./node_modules/virmator/base-configs/base-tsconfig.json"
+    "extends": "./node_modules/virmator/base-configs/base-tsconfig.json",
+    "compilerOptions": {
+        "outDir": "./dist",
+        "rootDir": "./src"
+    },
+    "exclude": [
+        "./configs/",
+        "./dist/",
+        "./node_modules/",
+        "./test-files/"
+    ]
 }
