--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,17 @@
-*.test-helper.ts
+.*
+*.test-helper.d.ts
+*.test-helper.js
 *.test.d.ts
 *.test.js
 *.test.ts
 **/*/readme-examples/
 **/*/test/
-/.*
 /*.tgz
+/coverage/
+/cspell.config.js
+/graphics/
 /Icon?
-coverage/
-graphics/
-src/
-test-files/
-/tsconfig.json
+/scripts/
+/src/
+/test-files/
+tsconfig*.json
