--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "format:check": "npm run format:base -- --check",
         "prepack": "npm run compile",
-        "prepublishOnly": "npm run test:full",
+        "prepublishOnly": "npm run test:all",
         "readme:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
         "readme:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
         "test": "bash src/scripts/run-tests.sh",
-        "test:full": "npm run test && npm run spellcheck -- --no-progress && npm run format:check && npm run readme:check",
+        "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run format:check && npm run readme:check",
         "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help",
         "test:types": "tsc --noEmit"
     },
@@ -51,7 +51,7 @@
         "@open-wc/testing": "3.1.6",
         "@types/chai": "4.3.3",
         "@types/mocha": "10.0.0",
-        "@types/node": "18.8.0",
+        "@types/node": "18.8.1",
         "@types/semver": "7.3.12",
         "@web/dev-server-esbuild": "0.3.2",
         "@web/test-runner": "0.14.0",
