--- a/.npmignore
+++ b/.npmignore
@@ -1,17 +1,14 @@
-.*
-*.test-helper.d.ts
-*.test-helper.js
+*.test-helper.ts
 *.test.d.ts
 *.test.js
 *.test.ts
 **/*/readme-examples/
 **/*/test/
+/.*
 /*.tgz
-/coverage/
-/cspell.config.js
-/graphics/
 /Icon?
-/scripts/
-/src/
-/test-files/
-tsconfig*.json
+coverage/
+graphics/
+src/
+test-files/
+/tsconfig.json
