--- a/configs/.vscode/settings.json
+++ b/configs/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "[ruby]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "[css]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
