--- a/test-files/update-configs/full-repo/.npmignore
+++ b/test-files/update-configs/full-repo/.npmignore
@@ -1,16 +1,16 @@
 **/*/readme-examples/
 **/*/test/
-*.test-helper.ts
-*.test.d.ts
-*.test.js
-*.test.ts
+*.test-helper.*
+*.test.*
 .*
 /*.tgz
 /Icon?
-coverage/
-graphics/
-src/
-test-files/
+/coverage/
+/cspell.config.js
+/graphics/
+/scripts/
+/src/
+/test-files/
 tsconfig*.json
 
 ./something-that-doesn't-exist/
