--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "devDependencies": {
         "@open-wc/testing": "3.1.6",
         "@types/chai": "4.3.3",
+        "@types/fs-extra": "^9.0.13",
         "@types/mocha": "10.0.0",
         "@types/node": "18.8.3",
         "@types/semver": "7.3.12",
@@ -60,6 +61,7 @@
         "augment-vir": "2.5.1",
         "chai": "4.3.6",
         "cspell": "6.12.0",
+        "fs-extra": "^10.1.0",
         "markdown-code-example-inserter": "0.1.11",
         "mocha": "10.0.0",
         "prettier": "2.7.1",
