--- a/configs/package.json
+++ b/configs/package.json
@@ -5,15 +5,15 @@
     "scripts": {
         "build": "virmator frontend build",
         "compile": "rm -rf dist && virmator compile",
-        "docs:check": "virmator code-in-markdown check",
         "docs:update": "virmator code-in-markdown",
         "format": "virmator format",
         "prepublishOnly": "npm run compile && npm run test:all",
         "preview": "virmator frontend preview",
         "spellcheck": "virmator spellcheck",
         "start": "npm install && virmator frontend",
-        "test": "virmator test",
-        "test:all": "npm run test:types && npm test && npm run spellcheck && virmator format check && npm run docs:check",
+        "test": "virmator test && npm run test:types",
+        "test:all": "npm run test:types && npm test && npm run spellcheck && virmator format check && npm run test:docs",
+        "test:docs": "virmator code-in-markdown check",
         "test:types": "tsc --noEmit",
         "test:web": "virmator test-web"
     }
