--- a/configs/package.json
+++ b/configs/package.json
@@ -12,8 +12,9 @@
         "spellcheck": "virmator spellcheck",
         "start": "npm install && virmator frontend",
         "test": "virmator test && npm run test:types",
-        "test:all": "npm run test:types && npm test && npm run spellcheck && virmator format check && npm run test:docs",
+        "test:all": "npm run test:types && npm test && npm run spellcheck && npm run test:format && npm run test:docs",
         "test:docs": "virmator code-in-markdown check",
+        "test:format": "virmator format check",
         "test:types": "tsc --noEmit",
         "test:web": "virmator test-web"
     }
