--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "4.1.0",
+    "version": "4.2.0",
     "description": "Handle all the stuffs in one package.",
     "keywords": [
         "automation",
@@ -30,13 +30,13 @@
         "compile": "rm -rf dist && tsc",
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
-        "format:check": "npm run format:base -- --check",
         "prepublishOnly": "npm run test:all",
         "readme:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
         "readme:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
         "spellcheck": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
         "test": "bash src/scripts/run-tests.sh",
-        "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run format:check && npm run readme:check",
+        "test:all": "npm run test && npm run spellcheck -- --no-progress && npm run test:format && npm run readme:check",
+        "test:format": "npm run format:base -- --check",
         "test:help": "ts-node -r tsconfig-paths/register src/cli/cli.ts --help",
         "test:types": "tsc --noEmit"
     },
@@ -65,6 +65,7 @@
         "markdown-code-example-inserter": "0.1.11",
         "mocha": "10.0.0",
         "mocha-spec-reporter-with-file-names": "^0.0.0",
+        "nyc": "^15.1.0",
         "prettier": "2.7.1",
         "prettier-plugin-jsdoc": "0.4.2",
         "prettier-plugin-multiline-arrays": "1.1.1",
