--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -5,9 +5,9 @@
         "rootDir": "./src"
     },
     "exclude": [
-        "./configs/",
-        "./dist/",
-        "./node_modules/",
-        "./test-files/"
+        "./configs",
+        "./dist",
+        "./node_modules",
+        "./test-files"
     ]
 }
