--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "4.2.2",
+    "version": "4.2.3",
     "description": "Handle all the stuffs in one package.",
     "keywords": [
         "automation",
@@ -75,8 +75,8 @@
         "prettier-plugin-toml": "0.3.1",
         "ts-node": "10.9.1",
         "tsconfig-paths": "4.1.0",
-        "typescript": "4.8.4",
-        "vite": "3.1.6"
+        "typescript": "^4.8.3",
+        "vite": "3.1.7"
     },
     "engines": {
         "node": ">=16",
