move vite configs and update for new version of augment-vir

--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "./node_modules/virmator/base-configs/base-tsconfig.json",
+    "extends": "virmator/base-configs/base-tsconfig.json",
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src"
