--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "4.2.7",
+    "version": "4.2.8",
     "description": "Handle all the stuffs in one package.",
     "keywords": [
         "automation",
@@ -30,6 +30,7 @@
         "compile": "rm -rf dist && tsc",
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
+        "prepack": "npm run compile",
         "prepublishOnly": "npm run test:all",
         "readme:check": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts check && md-code --check README.md",
         "readme:update": "npm run compile && ts-node -r tsconfig-paths/register src/scripts/save-help-message.ts && md-code README.md",
@@ -42,7 +43,7 @@
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
-        "augment-vir": "2.5.1",
+        "augment-vir": "3.0.2",
         "semver": "7.3.8",
         "simple-git": "3.14.1"
     },
@@ -52,18 +53,18 @@
         "@types/chai": "4.3.3",
         "@types/fs-extra": "^9.0.13",
         "@types/mocha": "10.0.0",
-        "@types/node": "18.8.4",
+        "@types/node": "18.8.5",
         "@types/semver": "7.3.12",
         "@web/dev-server-esbuild": "0.3.2",
         "@web/test-runner": "0.14.0",
         "@web/test-runner-commands": "0.6.5",
         "@web/test-runner-playwright": "0.8.10",
         "ansi-colors": "4.1.3",
-        "augment-vir": "2.5.1",
+        "augment-vir": "3.0.2",
         "chai": "4.3.6",
         "cspell": "6.12.0",
         "fs-extra": "^10.1.0",
-        "istanbul-smart-text-reporter": "^0.0.0",
+        "istanbul-smart-text-reporter": "^0.0.1",
         "markdown-code-example-inserter": "0.1.11",
         "mocha": "10.0.0",
         "mocha-spec-reporter-with-file-names": "^0.0.0",
