tweak how mocha finds test files, update deps

--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -6,6 +6,7 @@
     },
     "exclude": [
         "./configs",
+        "./coverage",
         "./dist",
         "./node_modules",
         "./test-files"
