--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "5.0.0",
+    "version": "5.0.1",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -29,7 +29,7 @@
     "types": "dist/index.d.ts",
     "bin": "dist/cli.js",
     "scripts": {
-        "compile": "rm -rf dist && tsc",
+        "compile": "rm -rf dist && rm -f ./*.tsbuildinfo && tsc",
         "docs:check": "npm run compile && tsx src/scripts/save-help-message.ts check && md-code --check README.md",
         "docs:update": "npm run compile && tsx src/scripts/save-help-message.ts && md-code README.md",
         "format": "npm run format:base -- --write --list-different",
@@ -43,14 +43,15 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^4.6.1",
-        "@augment-vir/node-js": "^4.6.1",
+        "@augment-vir/common": "^5.0.1",
+        "@augment-vir/node-js": "^5.0.1",
         "ansi-colors": "^4.1.3",
         "glob": "^8.0.3",
         "semver": "^7.3.8",
         "simple-git": "^3.15.1"
     },
     "devDependencies": {
+        "@electrovir/nyc": "^15.1.0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@open-wc/testing": "^3.1.7",
         "@types/chai": "^4.3.4",
@@ -66,11 +67,10 @@
         "chai": "^4.3.7",
         "cspell": "^6.15.1",
         "fs-extra": "^11.1.0",
-        "istanbul-smart-text-reporter": "^1.0.0",
+        "istanbul-smart-text-reporter": "^1.0.1",
         "markdown-code-example-inserter": "^0.1.11",
         "mocha": "^10.1.0",
         "mocha-spec-reporter-with-file-names": "^0.0.2",
-        "nyc": "^15.1.0",
         "prettier": "^2.8.0",
         "prettier-plugin-jsdoc": "^0.4.2",
         "prettier-plugin-multiline-arrays": "^1.1.1",
