revert to ts-node because tsx just has too many issues
also add configs so that ts-node only transpiles by default

--- a/base-configs/base-tsconfig.json
+++ b/base-configs/base-tsconfig.json
@@ -25,5 +25,11 @@
         "strict": true,
         "target": "ES2019",
         "useUnknownInCatchVariables": true
+    },
+    "ts-node": {
+        "transpileOnly": true,
+        "compilerOptions": {
+            "module": "CommonJS"
+        }
     }
 }
