disable progress reporting in web-test-runner config

--- a/.npmignore
+++ b/.npmignore
@@ -1,17 +1,17 @@
-*.test-helper.ts
-*.test.d.ts
-*.test.js
-*.test.ts
+.*
+*.d.ts.map
+*.test-helper.*
+*.test.*
+*.tgz
+*.tsbuildinfo
 **/*/readme-examples/
 **/*/test/
-/.*
-/*.tgz
+/coverage/
+/graphics/
 /Icon?
-/tsconfig.json
-coverage/
-graphics/
-src/
-src/scripts/
+/src/
+bash-scripts/
+/src/scripts/
+index.html
 test-files/
-test.d.ts
-test.js
+/tsconfig*.json
