add test coverage to test-web command

--- a/.npmignore
+++ b/.npmignore
@@ -1,17 +1,17 @@
-.*
-*.d.ts.map
-*.test-helper.*
-*.test.*
-*.tgz
-*.tsbuildinfo
+*.test-helper.ts
+*.test.d.ts
+*.test.js
+*.test.ts
 **/*/readme-examples/
 **/*/test/
-/coverage/
-/graphics/
+/.*
+/*.tgz
 /Icon?
-/src/
-bash-scripts/
-/src/scripts/
-index.html
+/tsconfig.json
+coverage/
+graphics/
+src/
+src/scripts/
 test-files/
-/tsconfig*.json
+test.d.ts
+test.js
