--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "5.1.0",
+    "version": "5.2.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -47,6 +47,7 @@
         "@augment-vir/node-js": "^6.1.5",
         "ansi-colors": "^4.1.3",
         "glob": "^8.0.3",
+        "glob-promise": "^5.0.0",
         "semver": "^7.3.8",
         "simple-git": "^3.15.1"
     },
@@ -69,7 +70,7 @@
         "fs-extra": "^11.1.0",
         "istanbul-smart-text-reporter": "^1.0.1",
         "markdown-code-example-inserter": "^0.1.13",
-        "mocha": "^10.1.0",
+        "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
         "prettier": "^2.8.1",
         "prettier-plugin-jsdoc": "^0.4.2",
@@ -82,7 +83,7 @@
         "tsconfig-paths": "^4.1.1",
         "type-fest": "^3.3.0",
         "typescript": "^4.9.4",
-        "vite": "^4.0.0"
+        "vite": "^4.0.1"
     },
     "engines": {
         "node": ">=16",
