try to fix publish script

--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
         "docs:update": "npm run compile && ts-node src/scripts/save-help-message.ts && md-code README.md",
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
-        "prepublishOnly": "npm run test:all",
         "publish": "virmator publish \"npm run test:all\"",
         "test": "IGNORE_VIRMATOR_STACK_TRACE=true test-as-package mocha --config mocha.config.js",
-        "test:all": "npm run test && npm run test:spelling -- --no-progress && npm run test:format && npm run docs:check",
+        "test:all": "npm ci && npm run compile && npm run test && npm ci && npm run test:spelling -- --no-progress && npm run test:format && npm run docs:check",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
         "test:spelling": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
