--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "6.4.4",
+    "version": "6.5.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -36,7 +36,7 @@
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "publish": "virmator publish \"npm run test:all\"",
         "test": "npm run compile && test-as-package mocha --config mocha.config.js",
-        "test:all": "npm ci && npm run compile && npm run test && npm ci && npm run test:spelling -- --no-progress && npm run test:format && npm run docs:check",
+        "test:all": "npm ci && concurrently --kill-others-on-fail \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
         "test:spelling": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
@@ -46,6 +46,7 @@
         "@augment-vir/common": "^13.3.0",
         "@augment-vir/node-js": "^13.3.0",
         "ansi-colors": "^4.1.3",
+        "concurrently": "^8.0.1",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.2",
         "semver": "^7.5.0",
@@ -56,11 +57,11 @@
         "@electrovir/nyc": "15.1.0-fix0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@open-wc/testing": "^3.1.8",
-        "@types/chai": "^4.3.4",
+        "@types/chai": "^4.3.5",
         "@types/fs-extra": "^11.0.1",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^18.16.1",
+        "@types/node": "^18.16.3",
         "@types/semver": "^7.3.13",
         "@web/dev-server-esbuild": "^0.4.1",
         "@web/test-runner": "^0.16.1",
@@ -89,8 +90,8 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.0.4",
-        "virmator": "^6.4.3",
-        "vite": "^4.3.2",
+        "virmator": "^6.4.4",
+        "vite": "^4.3.3",
         "vite-tsconfig-paths": "^4.2.0"
     },
     "engines": {
