--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "6.5.1",
+    "version": "6.5.2",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -36,20 +36,20 @@
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
         "publish": "virmator publish \"npm run test:all\"",
         "test": "npm run compile && test-as-package mocha --config mocha.config.js",
-        "test:all": "npm ci && concurrently --kill-others-on-fail \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
+        "test:all": "npm ci && concurrently --color --kill-others-on-fail -c auto \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
         "test:format": "npm run format:base -- --check",
         "test:help": "ts-node src/cli/cli.ts --help",
         "test:spelling": "cspell \"{*,.*,**/{.*,*}/**/{.*,*}}\" --exclude \"test-files/spellcheck/invalid-spellcheck-repo/**/*\" --exclude \"extender-configs\"",
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^13.4.0",
-        "@augment-vir/node-js": "^13.4.0",
+        "@augment-vir/common": "^14.1.1",
+        "@augment-vir/node-js": "^14.1.1",
         "ansi-colors": "^4.1.3",
         "concurrently": "^8.0.1",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.2",
-        "semver": "^7.5.0",
+        "semver": "^7.5.1",
         "simple-git": "^3.18.0",
         "type-fest": "^3.10.0"
     },
@@ -62,7 +62,7 @@
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
         "@types/node": "^18.16.3",
-        "@types/semver": "^7.3.13",
+        "@types/semver": "^7.5.0",
         "@web/dev-server-esbuild": "^0.4.1",
         "@web/test-runner": "^0.16.1",
         "@web/test-runner-commands": "^0.7.0",
@@ -70,13 +70,13 @@
         "@web/test-runner-visual-regression": "^0.8.0",
         "chai": "^4.3.7",
         "cspell": "^6.31.1",
-        "esbuild": "^0.17.18",
+        "esbuild": "^0.17.19",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.1",
         "markdown-code-example-inserter": "^0.3.0",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
-        "npm-check-updates": "^16.10.9",
+        "npm-check-updates": "^16.10.12",
         "prettier": "^2.8.8",
         "prettier-plugin-interpolated-html-tags": "^0.0.3",
         "prettier-plugin-jsdoc": "^0.4.2",
@@ -86,12 +86,12 @@
         "prettier-plugin-sort-json": "^1.0.0",
         "prettier-plugin-toml": "^0.3.1",
         "test-as-package": "^0.0.4",
-        "test-established-expectations": "^0.3.0",
+        "test-established-expectations": "^0.5.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.0.4",
-        "virmator": "^6.5.0",
-        "vite": "^4.3.5",
+        "virmator": "^6.5.1",
+        "vite": "^4.3.8",
         "vite-tsconfig-paths": "^4.2.0"
     },
     "engines": {
