add multilineArraysWrapThreshold: 1 to prettier config

--- a/base-configs/base-tsconfig.json
+++ b/base-configs/base-tsconfig.json
@@ -24,9 +24,9 @@
         "useUnknownInCatchVariables": true
     },
     "ts-node": {
-        "transpileOnly": true,
         "compilerOptions": {
             "module": "CommonJS"
-        }
+        },
+        "transpileOnly": true
     }
 }
